welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:11: error: too many arguments for method write: ()Unit
    write(cpt)
         ^ZigZag:17: error: not found: value cpt
	ecritMessage(cpt)
                     ^ZigZag:18: error: not found: value cpt
  cpt = cpt+1
  ^ZigZag:28: error: reassignment to val
  	x = x+1
          ^ZigZag:30: error: reassignment to val
  	x = x-1
          ^ZigZag:32: error: value ==- is not a member of Int
  if (x==-1)
       ^ZigZag:34: error: reassignment to val
    y=y+1
     ^ZigZag:35: error: reassignment to val
    dirEst = !dirEst
           ^ZigZag:36: error: reassignment to val
    x=0
     ^ZigZag:40: error: reassignment to val
    y=y+1
     ^ZigZag:41: error: reassignment to val
    dirEst = !dirEst
           ^ZigZag:42: error: reassignment to val
    x= getMondeLargeur()
     ^